--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   wifi_iot: ^0.3.18
   open_settings: ^2.0.2
   connectivity_plus: ^3.0.3
+  url_launcher: ^6.1.9
   #system_settings: ^2.1.0
 
 dev_dependencies:
